--- a/preview/add-text-area/angular/components/textarea/textarea.component.scss
+++ b/preview/add-text-area/angular/components/textarea/textarea.component.scss
@@ -68,12 +68,18 @@
 
       &:focus-visible,
       &:active {
-        border: 2px solid var(--border-brand-default);
+        outline: none;
+
+        &:not(:disabled) {
+          outline: $width-xs solid var(--border-brand-default);
+          border: $width-xs solid var(--border-brand-default);
+        }
       }
 
       &.error {
         &:not(:disabled) {
-          border: 2px solid var(--border-danger)
+          outline: $width-xs solid var(--border-danger);
+          border: $width-xs solid var(--border-danger)
         }
       }
 
@@ -81,14 +87,18 @@
         resize: vertical;
       }
 
-      &:disabled {
+      &:disabled,
+      &:read-only {
+        cursor: not-allowed;
         background-color: var(--background-disabled);
+      }
+
+      &:disabled {
         resize: none;
       }
 
       &:read-only {
         color: var(--content-secondary);
-        background-color: var(--background-disabled);
       }
     }
 
