feat: add border-divider token color

--- a/packages/core/design-tokens/tokens/themes/_violet-dark.scss
+++ b/packages/core/design-tokens/tokens/themes/_violet-dark.scss
@@ -34,6 +34,7 @@ $violet-dark: (
   "border-primary": $greyscale-400,
   "border-secondary": $greyscale-600,
   "border-tertiary": $greyscale-800,
+  "border-divider": $greyscale-400,
   "border-disabled": $greyscale-700,
   "border-inverse": $greyscale-900,
   "border-brand-default": $violet-0,
