--- a/packages/core/design-tokens/tokens/themes/_bleu-iceberg-light.scss
+++ b/packages/core/design-tokens/tokens/themes/_bleu-iceberg-light.scss
@@ -34,6 +34,7 @@ $bleu-iceberg-light: (
   "border-primary": $greyscale-600,
   "border-secondary": $greyscale-400,
   "border-tertiary": $greyscale-200,
+  "border-divider": $greyscale-200,
   "border-disabled": $greyscale-200,
   "border-inverse": $core-white,
   "border-brand-default": $bleu-iceberg-600,
