deploy: 3fa12aff3db1ec00b7862f49f0e615f0ff668d93

--- a/preview/divider/angular/components/divider/divider.component.html
+++ b/preview/divider/angular/components/divider/divider.component.html
@@ -1,2 +1,5 @@
-<hr *ngIf="isHorizontal()" class="horizontal {{thickness()}} {{color()}}" />
-<div *ngIf="!isHorizontal()" class="vertical {{thickness()}} {{color()}}" role="separator"></div>
+@if (isHorizontal()) {
+  <hr class="horizontal {{thickness()}} {{color()}}" />
+} @else {
+  <div class="vertical {{thickness()}} {{color()}}" role="separator"></div>
+}
