feat(segmented control) add storybook interactions tests

--- a/packages/react/src/components/segmentedControl/SegmentedControl.module.scss
+++ b/packages/react/src/components/segmentedControl/SegmentedControl.module.scss
@@ -78,6 +78,10 @@
     }
   }
 
+  &[data-segment-type="icon"] {
+    padding: $positive-spacing_100;
+  }
+
   .segment-content {
     display: flex;
     align-items: center;
