feat(Switch): add aria-label for accessibility and update storybook interactions

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/switch/switch.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/switch/switch.component.html
@@ -8,6 +8,7 @@
     (click)="handleClick($event)"
 >
     <input
+        [ariaLabel]="label()"
         type="checkbox"
         role="switch"
         class="switch"
