--- a/packages/angular/projects/ds-rte-lib/src/lib/components/switch/switch.component.scss
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/switch/switch.component.scss
@@ -120,6 +120,7 @@
             }
 
             .switch-icon-check {
+            cursor: not-allowed;
                 top: calc(50% - 10px);
                 left: 2px;
                 background-color: var(--background-default);
@@ -141,6 +142,7 @@
             }
 
             .switch-icon-check {
+            cursor: not-allowed;
                 top: calc(50% - 10px);
                 left: 2px;
                 background-color: var(--background-default);
