--- a/packages/react/src/components/switch/Switch.module.scss
+++ b/packages/react/src/components/switch/Switch.module.scss
@@ -120,6 +120,7 @@
             }
 
             .switch-icon-check {
+            cursor: not-allowed;
                 top: calc(50% - 10px);
                 left: 2px;
                 background-color: var(--background-default);
@@ -137,6 +138,7 @@
             }
 
             .switch-icon-check {
+            cursor: not-allowed;
                 top: calc(50% - 10px);
                 left: 2px;
                 background-color: var(--background-default);
@@ -170,6 +172,7 @@
         }
 
         .switch-icon-check {
+            cursor: not-allowed;
             top: calc(50% - 10px);
             left: 2px;
             background-color: var(--background-default);
@@ -199,6 +202,7 @@
         }
 
         .switch-icon-check {
+            cursor: not-allowed;
             top: calc(50% - 10px);
             left: 2px;
             background-color: var(--background-default);
