--- a/test-apps/angular/src/app/app.component.html
+++ b/test-apps/angular/src/app/app.component.html
@@ -50,8 +50,33 @@
   [required]="true"
 />
 
+<hr />
+
 <rte-link
   href="https://example.com"
   label="Link"
   [subtle]="false"
 />
+
+<hr />
+
+<rte-switch
+  label="Switch"
+  [disabled]="false"
+  [readOnly]="false"
+  [appearance]="'brand'"
+></rte-switch>
+<rte-switch
+  label="Switch ReadOnly"
+  [disabled]="false"
+  [readOnly]="true"
+  [appearance]="'brand'"
+  [showIcon]="true"
+></rte-switch>
+<rte-switch
+  label="Switch disabled"
+  [disabled]="true"
+  [readOnly]="false"
+  [appearance]="'brand'"
+  [showLabel]="true"
+></rte-switch>
