fix(Switch): improve keyboard accessibility by consolidating onKeyDown event handling

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/switch/switch.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/switch/switch.component.html
@@ -1,12 +1,12 @@
 <div
     class="switch-container appearance-{{appearance()}}"
+    onkeypress="handleClick($event)"
     [ngClass]="{
         'disabled': disabled(),
         'read-only': readOnly(),
         'checked': checked()
     }"
     (click)="handleClick($event)"
-    onkeypress="handleClick($event)"
 >
     <input
         type="checkbox"
@@ -23,23 +23,23 @@
         [style.min-height.px]="switchHeight"
         [style.min-width.px]="switchWidth"
     />
-    <div class="switch-icon-check" [ngClass]="{'checked': checked() }" (click)="handleClick($event)" onkeypress="handleClick($event)    ">
+    <div class="switch-icon-check" onkeypress="handleClick($event)    " [ngClass]="{'checked': checked() }" (click)="handleClick($event)">
         @if (showIcon() && checked()) {
             <rte-icon
             class="icon"
+            onkeypress="handleClick($event)"
             [name]="'check'"
             [size]="16"
             (click)="handleClick($event)"
-            onkeypress="handleClick($event)"
             ></rte-icon>
         }
         @if (showIcon() && !checked()) {
             <rte-icon
             class="icon"
+            onkeypress="handleClick($event)"
             [name]="'close'"
             [size]="16"
             (click)="handleClick($event)"
-            onkeypress="handleClick($event)"
             ></rte-icon>
         }
     </div>
