deploy: 9ea06c8bd7b97eba5396e49683c54617512e87bd

--- a/preview/switch/angular/components/switch/switch.component.html
+++ b/preview/switch/angular/components/switch/switch.component.html
@@ -1,5 +1,6 @@
 <div
     class="switch-container appearance-{{appearance()}}"
+    role="switch"
     onkeypress="handleClick($event)"
     [ngClass]="{
         'disabled': disabled(),
@@ -23,23 +24,19 @@
         [style.min-height.px]="switchHeight"
         [style.min-width.px]="switchWidth"
     />
-    <div class="switch-icon-check" onkeypress="handleClick($event)    " [ngClass]="{'checked': checked() }" (click)="handleClick($event)">
+    <div class="switch-icon-check" [ngClass]="{'checked': checked() }">
         @if (showIcon() && checked()) {
             <rte-icon
             class="icon"
-            onkeypress="handleClick($event)"
             [name]="'check'"
             [size]="16"
-            (click)="handleClick($event)"
             ></rte-icon>
         }
         @if (showIcon() && !checked()) {
             <rte-icon
             class="icon"
-            onkeypress="handleClick($event)"
             [name]="'close'"
             [size]="16"
-            (click)="handleClick($event)"
             ></rte-icon>
         }
     </div>
