--- a/packages/react/src/components/segmentedControl/SegmentedControl.module.scss
+++ b/packages/react/src/components/segmentedControl/SegmentedControl.module.scss
@@ -58,7 +58,7 @@
   z-index: 0;
 
   &:focus-visible {
-    outline: 1px solid var(--border-inverse);
+    outline: $width-xs solid var(--border-inverse);
     outline-offset: -2px;
   }
 
@@ -67,7 +67,7 @@
     color: var(--content-brand-default);
 
     &:focus-visible {
-      outline: 1px solid var(--border-brand-focused);
+      outline: $width-xs solid var(--border-brand-focused);
     }
   }
 
