--- a/packages/angular/projects/ds-rte-lib/src/lib/components/segmented-control/segmented-control.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/segmented-control/segmented-control.component.html
@@ -1,5 +1,5 @@
 <div class="rte-segmented-control" role="radiogroup" [attr.aria-label]="ariaLabel()">
-  <span class="rte-segment-selected-indicator" [ngStyle]="{ left: sliderLeft + 'px', width: sliderWidth + 'px' }"></span>
+  <span class="rte-segment-selected-indicator" [ngStyle]="segmentSelectedIndicatorStyle()"></span>
   <ng-container *ngFor="let option of options(); let idx = index">
     <div class="rte-segment-container" [attr.data-position]="getSegmentPosition(idx)">
       <div
@@ -11,6 +11,7 @@
       [attr.data-segment-type]="option.icon ?  'icon' : 'label'"
       [class.selected]="selectedSegment() === option.id"
       [attr.aria-checked]="selectedSegment() === option.id"
+      [attr.aria-label]="option.label"
       (click)="selectSegment(option.id)"
       (keydown)="handleKeyDown($event)"
       (keyup)="handleKeyUp($event)"
@@ -20,7 +21,7 @@
           name="check-small"
           class="rte-selected-icon"
           [size]="24"
-          ></rte-icon>
+      />
       <div class="rte-segment-content">
         <ng-container *ngIf="option.icon; else label">
           <rte-icon [name]="option.icon" [size]="24"></rte-icon>
