--- a/preview/add-segmented-control/angular/components/segmented-control/segmented-control.component.html
+++ b/preview/add-segmented-control/angular/components/segmented-control/segmented-control.component.html
@@ -1,5 +1,5 @@
 <div class="rte-segmented-control" role="radiogroup" [attr.aria-label]="ariaLabel()">
-  <span class="rte-segment-selected-indicator" [ngStyle]="{ left: sliderLeft + 'px', width: sliderWidth + 'px' }"></span>
+  <span class="rte-segment-selected-indicator" [ngStyle]="segmentSelectedIndicatorStyle()"></span>
   <ng-container *ngFor="let option of options(); let idx = index">
     <div class="rte-segment-container" [attr.data-position]="getSegmentPosition(idx)">
       <div
@@ -20,7 +20,7 @@
           name="check-small"
           class="rte-selected-icon"
           [size]="24"
-          ></rte-icon>
+      />
       <div class="rte-segment-content">
         <ng-container *ngIf="option.icon; else label">
           <rte-icon [name]="option.icon" [size]="24"></rte-icon>
