deploy: 60de37c5208c3cd89e68385ef48f924cd11b323f

--- a/preview/add-segmented-control/angular/components/segmented-control/segmented-control.component.html
+++ b/preview/add-segmented-control/angular/components/segmented-control/segmented-control.component.html
@@ -11,6 +11,7 @@
       [attr.data-segment-type]="option.icon ?  'icon' : 'label'"
       [class.selected]="selectedSegment() === option.id"
       [attr.aria-checked]="selectedSegment() === option.id"
+      [attr.aria-label]="option.label"
       (click)="selectSegment(option.id)"
       (keydown)="handleKeyDown($event)"
       (keyup)="handleKeyUp($event)"
