--- a/packages/angular/projects/ds-rte-lib/src/lib/components/segmented-control/segmented-control.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/segmented-control/segmented-control.component.html
@@ -9,22 +9,22 @@
       tabindex="0"
       [attr.data-id]="option.id"
       [attr.data-segment-type]="option.icon ?  'icon' : 'label'"
-      [class.selected]="selectedSegment() === option.id"
-      [attr.aria-checked]="selectedSegment() === option.id"
+      [class.selected]="isSegmentSelected(option.id)"
+      [attr.aria-checked]="isSegmentSelected(option.id)"
       [attr.aria-label]="option.label"
       (click)="selectSegment(option.id)"
       (keydown)="handleKeyDown($event)"
       (keyup)="handleKeyUp($event)"
       >
       <rte-icon
-          *ngIf="selectedSegment() === option.id"
+          *ngIf="isSegmentSelected(option.id)"
           name="check-small"
           class="rte-selected-icon"
           [size]="24"
       />
       <div class="rte-segment-content">
         <ng-container *ngIf="option.icon; else label">
-          <rte-icon [name]="option.icon" [size]="24"></rte-icon>
+          <rte-icon [name]="option.icon" [size]="24" [appearance]="isSegmentSelected(option.id) ? 'filled' : 'outlined' "></rte-icon>
         </ng-container>
         <ng-template #label>
           <span class="rte-segment-label">{{ option.label }}</span>
