deploy: 20b245e9fc1f4f06c62e0923ee131a19230e329b

--- a/preview/component-switch/angular/components/switch/switch.component.html
+++ b/preview/component-switch/angular/components/switch/switch.component.html
@@ -28,18 +28,10 @@
         [checked]="isChecked()"
     />
     <div class="switch-icon-check" [ngClass]="{'checked': isChecked() }" (click)="handleClick($event)">
-        @if (showIcon() && isChecked()) {
+        @if (showIcon()) {
             <rte-icon
             class="icon"
-            [name]="'check'"
-            [size]="16"
-            (click)="handleClick($event)"
-            ></rte-icon>
-        }
-        @if (showIcon() && !isChecked()) {
-            <rte-icon
-            class="icon"
-            [name]="'close'"
+            [name]="isChecked() ? 'check' : 'close'"
             [size]="16"
             (click)="handleClick($event)"
             ></rte-icon>
