deploy: 7de8d09d3c2e9ff32cbc2bbb1fa136c756b18f3d

--- a/preview/component-switch/angular/components/switch/switch.component.html
+++ b/preview/component-switch/angular/components/switch/switch.component.html
@@ -8,13 +8,13 @@
     (click)="handleClick($event)"
 >
     <input
+        aria-checked="{{ isChecked() }}"
+        aria-label="{{ label() }}"
+        aria-disabled="{{ disabled() }}"
+        aria-readonly="{{ readOnly() }}"
         type="checkbox"
         role="switch"
         class="switch"
-        [attr.aria-label]="label()"
-        [attr.aria-checked]="isChecked()"
-        [attr.aria-disabled]="disabled()"
-        [attr.aria-readonly]="readOnly()"
         [ariaLabel]="label()"
         [name]="label()"
         [ngClass]="{
