feat: add color prop to Divider component for customizable styling

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/divider/divider.component.scss
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/divider/divider.component.scss
@@ -17,6 +17,10 @@
     &.bold {
         border-top: 4px solid var(--border-divider);
     }
+
+    &.inverse {
+        border-top-color: var(--border-inverse);
+    }
 }
 
 .vertical {
@@ -35,5 +39,9 @@
 
     &.bold {
         width: 4px;
+    }
+
+    &.inverse {
+        background-color: var(--border-inverse);
     }
 }
