--- a/packages/angular/projects/ds-rte-lib/src/lib/components/divider/divider.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/divider/divider.component.html
@@ -1,2 +1,2 @@
-<hr *ngIf="isHorizontal()" class="horizontal {{thickness()}}" />
-<div *ngIf="!isHorizontal()" class="vertical {{thickness()}}" role="separator"></div>
+<hr *ngIf="isHorizontal()" class="horizontal {{thickness()}} {{color()}}" />
+<div *ngIf="!isHorizontal()" class="vertical {{thickness()}} {{color()}}" role="separator"></div>
