--- a/packages/react/src/components/divider/Divider.module.scss
+++ b/packages/react/src/components/divider/Divider.module.scss
@@ -24,7 +24,7 @@
 }
 
 .vertical {
-    height: 100%;
+    height: auto;
     background-color: var(--border-divider);
     margin: 0;
     padding: 0;
