--- a/test-apps/angular/src/app/app.component.html
+++ b/test-apps/angular/src/app/app.component.html
@@ -55,3 +55,14 @@
   label="Link"
   [subtle]="false"
 />
+
+<p> Divider </p>
+<rte-divider></rte-divider>
+<div style="display: flex; flex-direction: row;">
+  <p style="margin: 20px;"> left text </p>
+  <rte-divider orientation="vertical"></rte-divider>
+  <p style="margin: 20px;"> middle text </p>
+  <rte-divider orientation="vertical" thickness="medium"></rte-divider>
+  <p style="margin: 20px;"> right text </p>
+  <rte-divider orientation="vertical" thickness="bold"></rte-divider>
+</div>
