--- a/packages/angular/projects/ds-rte-lib/src/lib/components/divider/divider.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/divider/divider.component.html
@@ -1,2 +1,5 @@
-<hr *ngIf="isHorizontal()" class="horizontal {{thickness()}} {{color()}}" />
-<div *ngIf="!isHorizontal()" class="vertical {{thickness()}} {{color()}}" role="separator"></div>
+@if (isHorizontal()) {
+  <hr class="horizontal {{thickness()}} {{color()}}" />
+} @else {
+  <div class="vertical {{thickness()}} {{color()}}" role="separator"></div>
+}
