fix(Divider): divider now rendering in react storybook when vertical

--- a/packages/react/src/components/divider/Divider.module.scss
+++ b/packages/react/src/components/divider/Divider.module.scss
@@ -5,6 +5,7 @@
     padding: 0;
     margin: 0;
     width: 100%;
+    border-radius: $radius-pill;
 
     &[data-thickness='light'] {
         border-top: 1px solid var(--border-divider);
@@ -24,10 +25,11 @@
 }
 
 .vertical {
-    height: auto;
+    height: 100%;
     background-color: var(--border-divider);
     margin: 0;
     padding: 0;
+    border-radius: $radius-pill;
 
     &[data-thickness='light'] {
         width: 1px;
