feat(Divider): add appearance and  endPoint prop

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/divider/divider.component.scss
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/divider/divider.component.scss
@@ -6,6 +6,10 @@
     margin: 0;
     width: 100%;
 
+    &.round{
+        border-radius: $radius-pill;
+    }
+
     &.light {
         border-top: 1px solid var(--border-divider);
     }
@@ -28,6 +32,10 @@
     background-color: var(--border-divider);
     margin: 0;
     padding: 0;
+
+    &.round {
+        border-radius: $radius-pill;
+    }
 
     &.light {
         width: 1px;
