--- a/packages/angular/projects/ds-rte-lib/src/lib/components/divider/divider.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/divider/divider.component.html
@@ -1,5 +1,5 @@
 @if (isHorizontal()) {
-  <hr class="horizontal {{thickness()}} {{color()}}" />
+  <hr class="horizontal {{thickness()}} {{appearance()}} {{endPoint()}}" />
 } @else {
-  <div class="vertical {{thickness()}} {{color()}}" role="separator"></div>
+  <div class="vertical {{thickness()}} {{appearance()}} {{endPoint()}}" role="separator"></div>
 }
