--- a/packages/react/src/components/divider/Divider.module.scss
+++ b/packages/react/src/components/divider/Divider.module.scss
@@ -5,7 +5,10 @@
     padding: 0;
     margin: 0;
     width: 100%;
-    border-radius: $radius-pill;
+
+    &[data-end-point='round'] {
+        border-radius: $radius-pill;
+    }
 
     &[data-thickness='light'] {
         border-top: 1px solid var(--border-divider);
@@ -19,7 +22,7 @@
         border-top: 4px solid var(--border-divider);
     }
 
-    &[data-color='inverse'] {
+    &[data-appearance='inverse'] {
         border-top-color: var(--border-inverse);
     }
 }
@@ -29,7 +32,10 @@
     background-color: var(--border-divider);
     margin: 0;
     padding: 0;
-    border-radius: $radius-pill;
+
+    &[data-end-point='round'] {
+        border-radius: $radius-pill;
+    }
 
     &[data-thickness='light'] {
         width: 1px;
@@ -43,7 +49,7 @@
         width: 4px;
     }
 
-    &[data-color='inverse'] {
+    &[data-appearance='inverse'] {
         background-color: var(--border-inverse);
     }
 }
