--- a/packages/react/src/components/tooltip/Tooltip.module.scss
+++ b/packages/react/src/components/tooltip/Tooltip.module.scss
@@ -1,24 +1,30 @@
 @use '@design-system-rte/core/design-tokens/main.scss' as *;
 
-.tooltip {
+.tooltip-trigger {
     position: relative;
-    display: inline-block;
+    width: max-content;
+}
+
+.tooltip {
+    position: absolute;
+    pointer-events: none;
+    top: 0;
+    left: 0;
+    background: var(--background-inverse);
+    border-radius: $radius-s;
+    padding-block: $positive-spacing_050;
+    padding-inline: $positive-spacing_200;
+    transition: opacity 150ms ease-out;
+    color: var(--content-primary-inverse);
+    opacity: 0;
+    text-align: center;
+    z-index: 1;
+    max-width: 160px;
+    max-height: 40px;
 
     .tooltipLabel {
         @include typography-tooltip-label;
-        color: var(--content-primary-inverse);
-        position: absolute;
-        opacity: 0;
-        text-align: center;
-        z-index: 1;
-        max-width: 160px;
-        max-height: 40px;
         width: fit-content;
-        padding-block: $positive-spacing_050;
-        padding-inline: $positive-spacing_200;
-        border-radius: $radius-s;
-        background: var(--background-inverse);
-        transition: opacity 150ms ease-out;
 
         &::after {
             content: '';
@@ -31,10 +37,6 @@
     &[data-position='top'] {
 
         .tooltipLabel {
-            bottom: 150%;
-            left: 50%;
-            transform: translateX(-50%);
-
             &::after {
                 top: 100%;
                 left: 50%;
@@ -54,10 +56,6 @@
 
     &[data-position='bottom'] {
         .tooltipLabel {
-            top: 150%;
-            left: 50%;
-            transform: translateX(-50%);
-
             &::after {
                 bottom: 100%;
                 left: 50%;
@@ -77,10 +75,6 @@
 
     &[data-position='left'] {
         .tooltipLabel {
-            top: 50%;
-            right: 120%;
-            transform: translateY(-50%);
-
             &::after {
                 top: 50%;
                 left: 100%;
@@ -100,10 +94,6 @@
 
     &[data-position='right'] {
         .tooltipLabel {
-            top: 50%;
-            left: 120%;
-            transform: translateY(-50%);
-
             &::after {
                 top: 50%;
                 right: 100%;
@@ -126,9 +116,8 @@
             display: none;
         }
     }
+}
 
-    &:is(:hover, :focus) .tooltipLabel {
-        opacity: 1;
-        transition: opacity 100ms ease-in;
-    }
+.tooltip[data-open='true'] {
+    opacity: 1;
 }
