fix(Switch): add missing aria-checked attribute to checkbox input

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/switch/switch.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/switch/switch.component.html
@@ -11,6 +11,7 @@
         type="checkbox"
         role="switch"
         class="switch"
+        aria-checked="{{ isChecked() }}"
         [attr.aria-label]="label()"
         [attr.aria-checked]="isChecked()"
         [attr.aria-disabled]="disabled()"
