--- a/packages/angular/projects/ds-rte-lib/src/lib/components/switch/switch.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/switch/switch.component.html
@@ -12,10 +12,9 @@
         role="switch"
         class="switch"
         aria-checked="{{ isChecked() }}"
-        [attr.aria-label]="label()"
-        [attr.aria-checked]="isChecked()"
-        [attr.aria-disabled]="disabled()"
-        [attr.aria-readonly]="readOnly()"
+        aria-label="{{ label() }}"
+        aria-disabled="{{ disabled() }}"
+        aria-readonly="{{ readOnly() }}"
         [ariaLabel]="label()"
         [name]="label()"
         [ngClass]="{
