--- a/packages/angular/projects/ds-rte-lib/src/lib/components/switch/switch.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/switch/switch.component.html
@@ -8,10 +8,10 @@
     (click)="handleClick($event)"
 >
     <input
-        aria-checked="{{ isChecked() }}"
-        aria-label="{{ label() }}"
-        aria-disabled="{{ disabled() }}"
-        aria-readonly="{{ readOnly() }}"
+        [attr.aria-checked]="isChecked()"
+        [attr.aria-label]="label()"
+        [attr.aria-disabled]="disabled()"
+        [attr.aria-readonly]="readOnly()"
         type="checkbox"
         role="switch"
         class="switch"
