--- a/test-apps/angular/src/app/app.component.html
+++ b/test-apps/angular/src/app/app.component.html
@@ -59,14 +59,14 @@
 />
 
 <p> Divider </p>
-<rte-divider></rte-divider>
+<rte-divider />
 <div style="display: flex; flex-direction: row;">
   <p style="margin: 20px;"> left text </p>
-  <rte-divider orientation="vertical"></rte-divider>
+  <rte-divider orientation="vertical" />
   <p style="margin: 20px;"> middle text </p>
-  <rte-divider orientation="vertical" thickness="medium"></rte-divider>
+  <rte-divider orientation="vertical" thickness="medium" />
   <p style="margin: 20px;"> right text </p>
-  <rte-divider orientation="vertical" thickness="bold"></rte-divider>
+  <rte-divider orientation="vertical" thickness="bold" />
 </div>
 
 <hr />
@@ -76,14 +76,14 @@
   [disabled]="false"
   [readOnly]="false"
   [appearance]="'brand'"
-></rte-switch>
+/>
 <rte-switch
   label="Switch ReadOnly"
   [disabled]="false"
   [readOnly]="true"
   [appearance]="'brand'"
   [showIcon]="true"
-></rte-switch>
+/>
 <rte-switch
   label="Switch disabled"
   [disabled]="true"
@@ -91,4 +91,4 @@
   [appearance]="'brand'"
   [showLabel]="true"
   [checked]="true"
-></rte-switch>
+/>
