feat(button): add neutral and reverse variants to button styles

--- a/packages/react/src/components/button/Button.module.scss
+++ b/packages/react/src/components/button/Button.module.scss
@@ -138,6 +138,48 @@
             cursor: default;
         }
     }
+
+    &[data-variant='neutral'] {
+        background: none;
+        border: none;
+        color: var(--content-primary);
+
+        &:hover {
+            color: var(--content-secondary);
+        }
+
+        &:active {
+            color: var(--content-tertiary);
+        }
+
+        &:disabled {
+            background: var(--background-disabled);
+            box-shadow: none;
+            color: var(--content-disabled);
+            cursor: default;
+        }
+    }
+
+    &[data-variant='reverse'] {
+        background: none;
+        border: none;
+        color: var(--content-primary-inverse);
+
+        &:hover {
+            color: var(--background-hover);
+        }
+
+        &:active {
+            color: var(--content-primary-inverse);
+        }
+
+        &:disabled {
+            background: var(--background-disabled);
+            box-shadow: none;
+            color: var(--content-disabled);
+            cursor: default;
+        }
+    }
 }
 
 .label {
